[package]
name = "ani-info"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
axum = "0.7.5"
dotenvy = "0.15.7"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
tokio-postgres = "0.7.11"
native-tls = "0.2.12"
postgres-native-tls = "0.5.0"
