[package]
name = "ani-info"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
shuttle-axum = "0.51.0"
shuttle-runtime = "0.51.0"
dotenvy = "0.15.7"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
tokio-postgres = "0.7.11"
native-tls = "0.2.12"
postgres-native-tls = "0.5.0"
moka = { version = "0.12.8", features = ["future"] }
